--- a/res/layout/create_reminder.xml
+++ b/res/layout/create_reminder.xml
@@ -20,10 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="top"
-        android:inputType="textMultiLine"
-        android:scrollbarFadeDuration="375"
-        android:scrollbarStyle="insideInset"
-        android:scrollbars="vertical" />
+        android:inputType="textMultiLine" />
 
     <LinearLayout
         android:id="@+id/hour"
@@ -116,8 +113,8 @@
             android:layout_weight=".2"
             android:text="@string/plus" />
     </LinearLayout>
-
-    <LinearLayout
+
+    <RelativeLayout
         android:id="@+id/actionButtons"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -125,22 +122,25 @@
         android:gravity="bottom|center_horizontal" >
 
         <Button
-            android:id="@+id/buttonAdd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="@string/add"
-            android:width="100dp" />
-
-        <Button
             android:id="@+id/buttonCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
             android:layout_weight="0"
             android:gravity="center_vertical|center_horizontal"
             android:text="@string/cancel"
             android:width="100dp" />
-    </LinearLayout>
+
+        <Button
+            android:id="@+id/buttonAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_weight="0"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="@string/add"
+            android:width="100dp" />
+    </RelativeLayout>
 
 </LinearLayout>
