--- a/res/layout/view_reminders.xml
+++ b/res/layout/view_reminders.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
-
+
+
     <ListView
         android:id="@+id/listReminders"
         android:layout_width="fill_parent"
@@ -13,13 +14,13 @@
         android:scrollbars="vertical" >
 
     </ListView>
-
+
     <LinearLayout
         android:id="@+id/actions"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:baselineAligned="false"
         android:fadingEdge="horizontal|vertical"
-        android:gravity="right"
         android:onClick=""
         android:padding="10dp" >
 
